(surprise) updated a bunch of notebooks and figures for Experiments

--- a/BrainNet/notebooks/FF_experiments_generalization.ipynb
+++ b/BrainNet/notebooks/FF_experiments_generalization.ipynb
@@ -39,7 +39,7 @@
     "                    use_output_rule=True,\n",
     "                    gd_output_rule=False,  # Not meta-trainable anymore!\n",
     "                    gd_output=False)\n",
-    "if 0:\n",
+    "if 1:\n",
     "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
     "                          mse_loss=False,\n",
     "                          update_misclassified_only=False,\n",
@@ -61,7 +61,7 @@
     "cap = 50  # Number of nodes firing per layer.\n",
     "\n",
     "# Training config.\n",
-    "num_runs = 10\n",
+    "num_runs = 5\n",
     "num_rule_epochs = 50\n",
     "num_epochs_upstream = 1\n",
     "num_epochs_downstream = 1\n",
@@ -121,9 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -140,7 +140,7 @@
      "text": [
       "==== Original RNN (very different from all the rest) ====\n",
       "\n",
-      "Run 1 / 10...\n",
+      "Run 1 / 5...\n",
       "Meta-learning on halfspace...\n"
      ]
     },
@@ -148,64 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [01:24<00:00,  1.68s/it]\n",
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last loss: 0.6891\n",
-      "Last train accuracy: 0.5087\n",
-      "Last test accuracy: 0.5000\n",
-      "Final upstream test acc 0.5000 not high enough, retrying...\n",
-      "Meta-learning on halfspace...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [01:30<00:00,  1.81s/it]\n",
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last loss: 0.6259\n",
-      "Last train accuracy: 0.6440\n",
-      "Last test accuracy: 0.6320\n",
-      "Final upstream test acc 0.6320 not high enough, retrying...\n",
-      "Meta-learning on halfspace...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [01:27<00:00,  1.75s/it]\n",
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last loss: 0.5528\n",
-      "Last train accuracy: 0.6547\n",
-      "Last test accuracy: 0.6600\n",
-      "Final upstream test acc 0.6600 not high enough, retrying...\n",
-      "Meta-learning on halfspace...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 50/50 [01:23<00:00,  1.66s/it]\n",
+      "100%|██████████| 50/50 [02:22<00:00,  2.86s/it]\n",
       "../LocalNetBase.py:77: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  self.rnn_rule = torch.tensor(rule).flatten().double()\n"
      ]
@@ -214,16 +157,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last loss: 0.6556\n",
-      "Last train accuracy: 0.7500\n",
-      "Last test accuracy: 0.7320\n",
+      "Last loss: 0.3737\n",
+      "Last train accuracy: 0.9500\n",
+      "Last test accuracy: 0.9220\n",
       "mnist_train: 60000\n",
       "mnist_test: 10000\n",
       "Training NEW brain instance on mnist...\n",
       "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
       "===> This is NOT recommended by Basile!\n",
-      "INITIAL train accuracy: 0.1049\n",
-      "INITIAL test accuracy: 0.1071\n",
+      "INITIAL train accuracy: 0.1113\n",
+      "INITIAL test accuracy: 0.1136\n",
       "Epoch 1 / 1 ...\n"
      ]
     },
@@ -231,7 +174,275 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|██████▉   | 41985/60000 [03:31<01:06, 271.33it/s]"
+      "100%|██████████| 60000/60000 [10:40<00:00, 93.68it/s] \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3552\n",
+      "Last train accuracy: 0.1096\n",
+      "Last test accuracy: 0.1102\n",
+      "\n",
+      "\n",
+      "Run 2 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:37<00:00,  3.15s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4966\n",
+      "Last train accuracy: 0.8687\n",
+      "Last test accuracy: 0.8480\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0903\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0891\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [10:34<00:00, 94.59it/s] \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.3052\n",
+      "Last train accuracy: 0.1800\n",
+      "Last test accuracy: 0.1874\n",
+      "\n",
+      "\n",
+      "Run 3 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:50<00:00,  3.41s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3617\n",
+      "Last train accuracy: 0.9453\n",
+      "Last test accuracy: 0.9320\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0984\n",
+      "INITIAL test accuracy: 0.0945\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [10:26<00:00, 95.81it/s] \n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.2828\n",
+      "Last train accuracy: 0.2294\n",
+      "Last test accuracy: 0.2321\n",
+      "\n",
+      "\n",
+      "Run 4 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:48<00:00,  3.37s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3694\n",
+      "Last train accuracy: 0.9487\n",
+      "Last test accuracy: 0.9240\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0948\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/60000 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INITIAL test accuracy: 0.0919\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [07:56<00:00, 125.92it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.2036\n",
+      "Last train accuracy: 0.2223\n",
+      "Last test accuracy: 0.2290\n",
+      "\n",
+      "\n",
+      "Run 5 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:23<00:00,  2.87s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.6628\n",
+      "Last train accuracy: 0.5533\n",
+      "Last test accuracy: 0.5540\n",
+      "Final upstream test acc 0.5540 not high enough, retrying...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:16<00:00,  2.72s/it]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.5692\n",
+      "Last train accuracy: 0.7133\n",
+      "Last test accuracy: 0.6980\n",
+      "Final upstream test acc 0.6980 not high enough, retrying...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:32<00:00,  3.06s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.3678\n",
+      "Last train accuracy: 0.9480\n",
+      "Last test accuracy: 0.9300\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.1082\n",
+      "INITIAL test accuracy: 0.1050\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [08:21<00:00, 119.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 2.2651\n",
+      "Last train accuracy: 0.1814\n",
+      "Last test accuracy: 0.1785\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -251,7 +462,241 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Interpretation: PrePost, 2 hidden layers (universal) ====\n",
+      "\n",
+      "Run 1 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:02<00:00,  2.44s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4573\n",
+      "Last train accuracy: 0.8407\n",
+      "Last test accuracy: 0.8320\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [04:23<00:00, 227.79it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.8632\n",
+      "Last train accuracy: 0.6143\n",
+      "Last test accuracy: 0.6232\n",
+      "\n",
+      "\n",
+      "Run 2 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:56<00:00,  2.32s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4400\n",
+      "Last train accuracy: 0.8467\n",
+      "Last test accuracy: 0.8420\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [03:49<00:00, 261.20it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.9512\n",
+      "Last train accuracy: 0.5207\n",
+      "Last test accuracy: 0.5276\n",
+      "\n",
+      "\n",
+      "Run 3 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:56<00:00,  2.32s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4595\n",
+      "Last train accuracy: 0.8240\n",
+      "Last test accuracy: 0.8240\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [05:25<00:00, 184.51it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.8332\n",
+      "Last train accuracy: 0.6139\n",
+      "Last test accuracy: 0.6251\n",
+      "\n",
+      "\n",
+      "Run 4 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [02:11<00:00,  2.62s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4623\n",
+      "Last train accuracy: 0.8313\n",
+      "Last test accuracy: 0.8240\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 60000/60000 [03:34<00:00, 279.60it/s]\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Last loss: 1.8532\n",
+      "Last train accuracy: 0.5917\n",
+      "Last test accuracy: 0.5962\n",
+      "\n",
+      "\n",
+      "Run 5 / 5...\n",
+      "Meta-learning on halfspace...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 50/50 [01:56<00:00,  2.33s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last loss: 0.4566\n",
+      "Last train accuracy: 0.8267\n",
+      "Last test accuracy: 0.7960\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "===> WARNING: Backprop is disabled, which means that all layers without rules will never change their weights!\n",
+      "===> This is NOT recommended by Basile!\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▎        | 8183/60000 [00:29<02:51, 302.70it/s]"
+     ]
+    }
+   ],
    "source": [
     "print('==== Interpretation: PrePost, 2 hidden layers (universal) ====')\n",
     "stats_prepost_l2_up, stats_prepost_l2_down = evaluate_up_down(\n",
