- Restored the batch_size and learn_rate parameters to their prior values for improved learning. - In evaluate_up_down(), wrapped the set_X_rule() calls in conditionals so that the function can be used for models that do not use a hidden-layer/graph or output rule.

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -133,7 +133,7 @@
     "            print('Meta-learning on ' + dataset_up + '...')\n",
     "            stats_up = metalearn_rules(\n",
     "                X_train, y_train, brain, num_rule_epochs=num_rule_epochs,\n",
-    "                num_epochs=num_epochs_upstream, batch_size=256, learn_rate=5e-3,\n",
+    "                num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
     "                X_test=X_test, y_test=y_test, verbose=False)\n",
     "            \n",
     "            success = (stats_up[2][-1] >= min_upstream_acc)\n",
@@ -150,7 +150,7 @@
     "            print('Training SAME brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=256, vanilla=False, learn_rate=5e-3,\n",
+    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False,\n",
     "            stats_interval=500, disable_backprop=not(downstream_backprop))\n",
     "        \n",
@@ -210,7 +210,7 @@
     "            print('Meta-learning on ' + dataset_up + '...')\n",
     "            stats_up = metalearn_rules(\n",
     "                X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
-    "                num_epochs=num_epochs_upstream, batch_size=256, learn_rate=5e-3,\n",
+    "                num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
     "                X_test=X_test, y_test=y_test, verbose=False)\n",
     "            \n",
     "            success = (stats_up[2][-1] >= min_upstream_acc)\n",
@@ -221,13 +221,17 @@
     "        brain_down = brain_down_fact()\n",
     "        if isinstance(brain_down, FFLocalNet):\n",
     "            # FF-ANN.\n",
-    "            brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
-    "            brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "            if brain_down.options.use_graph_rule:\n",
+    "                brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
+    "            if brain_down.options.use_output_rule:\n",
+    "                brain_down.set_output_rule(brain_up.get_output_rule())\n",
     "        else:\n",
     "            # RNN.\n",
     "            try:\n",
-    "                brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
-    "                brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "                if brain_down.options.use_graph_rule:\n",
+    "                    brain_down.set_rnn_rule(brain_up.get_rnn_rule())\n",
+    "                if brain_down.options.use_output_rule:\n",
+    "                    brain_down.set_output_rule(brain_up.get_output_rule())\n",
     "            except:\n",
     "                print('FALLBACK: direct assignment of rules...')\n",
     "                if downstream_backprop:\n",
@@ -243,7 +247,7 @@
     "            print('Training NEW brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=256, vanilla=False, learn_rate=5e-3,\n",
+    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
     "            X_test=X_test, y_test=y_test, verbose=False,\n",
     "            stats_interval=500, disable_backprop=not(downstream_backprop))\n",
     "        \n",
