Updated the brain factories to only assign the plasticity rules required according to the defined options. This allows the notebook to easily be used for a model that only uses an output layer rule, for example.

--- a/BrainNet/notebooks/FF_experiments_comparing_halfspace.ipynb
+++ b/BrainNet/notebooks/FF_experiments_comparing_halfspace.ipynb
@@ -409,29 +409,29 @@
    "source": [
     "# Instantiate brain factories.\n",
     "brain_prepost_up_fact = lambda: FFLocalNet(\n",
-    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme)\n",
+    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PrePost() if opts_up.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PrePost() if opts_up.use_output_rule else None, options=opts_up, update_scheme=scheme)\n",
     "brain_prepost_down_fact = lambda: FFLocalNet(\n",
-    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme)\n",
+    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PrePost() if opts_down.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PrePost() if opts_down.use_output_rule else None, options=opts_down, update_scheme=scheme)\n",
     "brain_prepostcount_up_fact = lambda: FFLocalNet(\n",
-    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme)\n",
+    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PrePostCount() if opts_up.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PrePostCount() if opts_up.use_output_rule else None, options=opts_up, update_scheme=scheme)\n",
     "brain_prepostcount_down_fact = lambda: FFLocalNet(\n",
-    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme)\n",
+    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PrePostCount() if opts_down.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PrePostCount() if opts_down.use_output_rule else None, options=opts_down, update_scheme=scheme)\n",
     "brain_prepostpercent_up_fact = lambda: FFLocalNet(\n",
-    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PrePostPercent(),\n",
-    "    output_rule=TableRule_PrePostPercent(), options=opts_up, update_scheme=scheme)\n",
+    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PrePostPercent() if opts_up.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PrePostPercent() if opts_up.use_output_rule else None, options=opts_up, update_scheme=scheme)\n",
     "brain_prepostpercent_down_fact = lambda: FFLocalNet(\n",
-    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PrePostPercent(),\n",
-    "    output_rule=TableRule_PrePostPercent(), options=opts_down, update_scheme=scheme)\n",
+    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PrePostPercent() if opts_down.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PrePostPercent() if opts_down.use_output_rule else None, options=opts_down, update_scheme=scheme)\n",
     "brain_postcount_up_fact = lambda: FFLocalNet(\n",
-    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PostCount(),\n",
-    "    output_rule=TableRule_PostCount(), options=opts_up, update_scheme=scheme)\n",
+    "    n_up, m, l, w, p, cap, hl_rules=TableRule_PostCount() if opts_up.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PostCount() if opts_up.use_output_rule else None, options=opts_up, update_scheme=scheme)\n",
     "brain_postcount_down_fact = lambda: FFLocalNet(\n",
-    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PostCount(),\n",
-    "    output_rule=TableRule_PostCount(), options=opts_down, update_scheme=scheme)"
+    "    n_down, m, l, w, p, cap, hl_rules=TableRule_PostCount() if opts_down.use_graph_rule else None,\n",
+    "    output_rule=TableRule_PostCount() if opts_down.use_output_rule else None, options=opts_down, update_scheme=scheme)"
    ]
   },
   {
