- In FFLocalNet, added method copy_rules() which can be used to easily copy all plasticity rules from one FFLocalNet to another (including multiple hidden-layer rules).    - The unique hidden layer rules in the two models are matched up based on their first occurrence in their respective hidden_layer_rules arrays       - Note that we match up unique rule objects, NOT necessarily layer-by-layer if the same rule is used for multiple layers.    - Rules must be 'copy compatible', currently defined as the same object type and same shape/size    - Marked existing methods for getting/setting the plasticity rules as 'legacy' to discourage their further use.
- Updated FF_common.ipynb to use the new copy_rules() method for copying the plasticity rules between brain_up and brain_down in evaluate_up_down()

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -221,10 +221,7 @@
     "        brain_down = brain_down_fact()\n",
     "        if isinstance(brain_down, FFLocalNet):\n",
     "            # FF-ANN.\n",
-    "            if brain_down.options.use_graph_rule:\n",
-    "                brain_down.set_hidden_layer_rule(brain_up.get_hidden_layer_rule())\n",
-    "            if brain_down.options.use_output_rule:\n",
-    "                brain_down.set_output_rule(brain_up.get_output_rule())\n",
+    "            brain_down.copy_rules(brain_up)\n",
     "        else:\n",
     "            # RNN.\n",
     "            try:\n",
