- Added ANN-based plasticity rule classes to the import list. - In evaluate_up_down(), increased the learn_rate in the call to train_downstream to match the call to metalearn_rules. My tests indicate the previous learning rate was too low to reach maximum accuracy when using backprop on the downstream training task.

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -40,6 +40,10 @@
     "from FFLocalPlasticityRules.TableRule_PrePostCount import TableRule_PrePostCount\n",
     "from FFLocalPlasticityRules.TableRule_PrePostPercent import TableRule_PrePostPercent\n",
     "from FFLocalPlasticityRules.TableRule_PostCount import TableRule_PostCount\n",
+    "from FFLocalPlasticityRules.OneBetaANNRule_PrePost import OneBetaANNRule_PrePost\n",
+    "from FFLocalPlasticityRules.OneBetaANNRule_PrePostAll import OneBetaANNRule_PrePostAll\n",
+    "from FFLocalPlasticityRules.OneBetaANNRule_PostAll import OneBetaANNRule_PostAll\n",
+    "from FFLocalPlasticityRules.AllBetasANNRule_PostAll import AllBetasANNRule_PostAll\n",
     "from LocalNetBase import Options, UpdateScheme\n",
     "from network import LocalNet\n",
     "from train import metalearn_rules, train_downstream"
@@ -244,7 +248,7 @@
     "            print('Training NEW brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
     "            X_train, y_train, brain_down, num_epochs=num_epochs_downstream,\n",
-    "            batch_size=100, vanilla=False, learn_rate=5e-3,\n",
+    "            batch_size=100, vanilla=False, learn_rate=1e-2,\n",
     "            X_test=X_test, y_test=y_test, verbose=False,\n",
     "            stats_interval=300, disable_backprop=not(downstream_backprop))\n",
     "        \n",
