In plot_curves(), we now completely hide an unused axis.

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -361,6 +361,8 @@
     "        ax[0].set_xlim(0, meta_sample_counts[-1])\n",
     "        ax[0].set_title(title_up)\n",
     "        ax[0].legend()\n",
+    "    else:\n",
+    "        ax[0].set_visible(False)\n",
     "    \n",
     "    # Right plot = downstream.\n",
     "    if not no_downstream_loss:\n",
