Updated to support using an output rule only.

--- a/BrainNet/notebooks/FF_experiments_comparing_halfspace.ipynb
+++ b/BrainNet/notebooks/FF_experiments_comparing_halfspace.ipynb
@@ -49,7 +49,7 @@
     "n_up = 8  # Input layer size for meta-learning.\n",
     "n_down = 8  # Input layer size for desired task training.\n",
     "m = 2  # Output layer size.\n",
-    "l = 2  # Number of hidden layers.\n",
+    "l = 2 if opts_up.use_graph_rule else 1  # Number of hidden layers.\n",
     "w = 32  # Width of hidden layers.\n",
     "p = 0.5  # Connectivity probability.\n",
     "cap = 16  # Number of nodes firing per layer.\n",
@@ -166,8 +166,8 @@
    "outputs": [],
    "source": [
     "# Instantiate upstream and downstream network factories\n",
-    "net_up_fact = lambda: LocalNet(n_up, m, w, p, cap, 1, options=opts_up, update_scheme=scheme)\n",
-    "net_down_fact = lambda: LocalNet(n_down, m, w, p, cap, 1, options=opts_down, update_scheme=scheme)"
+    "net_up_fact = lambda: LocalNet(n_up, m, w, p, cap, l-1, options=opts_up, update_scheme=scheme)\n",
+    "net_down_fact = lambda: LocalNet(n_down, m, w, p, cap, l-1, options=opts_down, update_scheme=scheme)"
    ]
   },
   {
