--- a/BrainNet/notebooks/FF_experiments_generalization_backprop.ipynb
+++ b/BrainNet/notebooks/FF_experiments_generalization_backprop.ipynb
@@ -39,14 +39,13 @@
     "                    use_output_rule=True,\n",
     "                    gd_output_rule=False,  # Not meta-trainable anymore!\n",
     "                    gd_output=False)\n",
-    "if 0:\n",
-    "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
-    "                          mse_loss=False,\n",
-    "                          update_misclassified_only=False,\n",
-    "                          update_all_edges=True)\n",
-    "else:\n",
-    "    # Same as paper.\n",
-    "    scheme = UpdateScheme(cross_entropy_loss=True,\n",
+    "# Deviates from paper (doesn't work for RNN).\n",
+    "scheme_ff = UpdateScheme(cross_entropy_loss=True,\n",
+    "                         mse_loss=False,\n",
+    "                         update_misclassified_only=False,\n",
+    "                         update_all_edges=True)  \n",
+    "# Same as paper (doesn't work for FF).\n",
+    "scheme_rnn = UpdateScheme(cross_entropy_loss=True,\n",
     "                          mse_loss=False,\n",
     "                          update_misclassified_only=True,\n",
     "                          update_all_edges=False)\n",
@@ -62,7 +61,7 @@
     "\n",
     "# Training config.\n",
     "num_runs = 5\n",
-    "num_rule_epochs = 50\n",
+    "num_rule_epochs = 70\n",
     "num_epochs_upstream = 1\n",
     "num_epochs_downstream = 1\n",
     "downstream_backprop = True\n",
@@ -79,41 +78,41 @@
     "# Instantiate brain factories.\n",
     "brain_prepost_l2_up_fact = lambda: FFLocalNet(\n",
     "    n_up, m_up, 2, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme_ff)\n",
     "brain_prepost_l2_down_fact = lambda: FFLocalNet(\n",
     "    n_down, m_down, 2, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme_ff)\n",
     "brain_prepost_l3_up_fact = lambda: FFLocalNet(\n",
     "    n_up, m_up, 3, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme_ff)\n",
     "brain_prepost_l3_down_fact = lambda: FFLocalNet(\n",
     "    n_down, m_down, 3, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme_ff)\n",
     "brain_prepost_l4_up_fact = lambda: FFLocalNet(\n",
     "    n_up, m_up, 4, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePost(), options=opts_up, update_scheme=scheme_ff)\n",
     "brain_prepost_l4_down_fact = lambda: FFLocalNet(\n",
     "    n_down, m_down, 4, w, p, cap, hl_rules=TableRule_PrePost(),\n",
-    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePost(), options=opts_down, update_scheme=scheme_ff)\n",
     "\n",
     "brain_prepostcount_l2_up_fact = lambda: FFLocalNet(\n",
     "    n_up, m_up, 2, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme_ff)\n",
     "brain_prepostcount_l2_down_fact = lambda: FFLocalNet(\n",
     "    n_down, m_down, 2, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme_ff)\n",
     "brain_prepostcount_l3_up_fact = lambda: FFLocalNet(\n",
     "    n_up, m_up, 3, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme_ff)\n",
     "brain_prepostcount_l3_down_fact = lambda: FFLocalNet(\n",
     "    n_down, m_down, 3, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme_ff)\n",
     "brain_prepostcount_l4_up_fact = lambda: FFLocalNet(\n",
     "    n_up, m_up, 4, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme)\n",
+    "    output_rule=TableRule_PrePostCount(), options=opts_up, update_scheme=scheme_ff)\n",
     "brain_prepostcount_l4_down_fact = lambda: FFLocalNet(\n",
     "    n_down, m_down, 4, w, p, cap, hl_rules=TableRule_PrePostCount(),\n",
-    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme)"
+    "    output_rule=TableRule_PrePostCount(), options=opts_down, update_scheme=scheme_ff)"
    ]
   },
   {
@@ -137,7 +136,7 @@
      "text": [
       "==== Interpretation: PrePost, 2 hidden layers (universal) ====\n",
       "\n",
-      "Run 1 / 10...\n",
+      "Run 1 / 5...\n",
       "Meta-learning on halfspace...\n"
      ]
     },
@@ -145,45 +144,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [02:17<00:00,  2.75s/it]\n",
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
+      "100%|██████████| 50/50 [01:29<00:00,  1.80s/it]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last loss: 0.6931\n",
-      "Last train accuracy: 0.4833\n",
-      "Last test accuracy: 0.5100\n",
-      "Final upstream test acc 0.5100 not high enough, retrying...\n",
-      "Meta-learning on halfspace...\n"
+      "Last loss: 0.5433\n",
+      "Last train accuracy: 0.9427\n",
+      "Last test accuracy: 0.9240\n",
+      "mnist_train: 60000\n",
+      "mnist_test: 10000\n",
+      "Training NEW brain instance on mnist...\n",
+      "INITIAL train accuracy: 0.0987\n",
+      "INITIAL test accuracy: 0.0980\n",
+      "Epoch 1 / 1 ...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50/50 [02:07<00:00,  2.55s/it]\n",
-      "  0%|          | 0/50 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last loss: 0.8000\n",
-      "Last train accuracy: 0.5093\n",
-      "Last test accuracy: 0.4800\n",
-      "Final upstream test acc 0.4800 not high enough, retrying...\n",
-      "Meta-learning on halfspace...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 74%|███████▍  | 37/50 [01:24<00:32,  2.46s/it]"
+      "  2%|▏         | 1345/60000 [00:12<07:34, 129.05it/s]"
      ]
     }
    ],
@@ -308,6 +291,7 @@
    "outputs": [],
    "source": [
     "# Instantiate model.\n",
+    "l = 3\n",
     "brain_vanilla = FFBrainNet(\n",
     "    n_down, m_down, l, w, p, cap, full_gd=True)"
    ]
@@ -324,7 +308,7 @@
     "print('Training VANILLA brain instance (WITH backprop) on mnist...')\n",
     "stats_vanilla = train_downstream(\n",
     "    X_train, y_train, brain_vanilla, num_epochs=num_epochs_downstream,\n",
-    "    batch_size=256, vanilla=True, learn_rate=5e-3,\n",
+    "    batch_size=100, vanilla=True, learn_rate=1e-2,\n",
     "    X_test=X_test, y_test=y_test, verbose=False, stats_interval=500)"
    ]
   },
@@ -355,19 +339,37 @@
    "outputs": [],
    "source": [
     "# Plot to compare all.\n",
-    "all_stats_up = [agg_stats_rnn_up,\n",
-    "                agg_stats_prepost_l2_up, agg_stats_prepost_l3_up, agg_stats_prepost_l4_up,\n",
-    "                agg_stats_prepostcount_l2_up, agg_stats_prepostcount_l3_up, agg_stats_prepostcount_l4_up,\n",
-    "                None]\n",
-    "all_stats_down = [agg_stats_rnn_down,\n",
-    "                  agg_stats_prepost_l2_down, agg_stats_prepost_l3_down, agg_stats_prepost_l4_down,\n",
-    "                  agg_stats_prepostcount_l2_down, agg_stats_prepostcount_l3_down, agg_stats_prepostcount_l4_down,\n",
-    "                  stats_vanilla]\n",
-    "labels = ['RNN', 'PrePost-L2', 'PrePost-L3', 'PrePost-L4', 'PrePostCount-L2', 'PrePostCount-L3', 'PrePostCount-L4', 'Vanilla']\n",
+    "all_stats_up = [agg_stats_prepost_l2_up, agg_stats_prepost_l3_up, agg_stats_prepost_l4_up,\n",
+    "                agg_stats_prepostcount_l2_up, agg_stats_prepostcount_l3_up, agg_stats_prepostcount_l4_up]\n",
+    "all_stats_down = [agg_stats_prepost_l2_down, agg_stats_prepost_l3_down, agg_stats_prepost_l4_down,\n",
+    "                  agg_stats_prepostcount_l2_down, agg_stats_prepostcount_l3_down, agg_stats_prepostcount_l4_down]\n",
+    "labels = ['PrePost-L2', 'PrePost-L3', 'PrePost-L4', 'PrePostCount-L2', 'PrePostCount-L3', 'PrePostCount-L4']\n",
     "plot_compare_models(all_stats_up, all_stats_down, labels,\n",
     "                    'Upstream meta-learning on ' + dataset_up,\n",
     "                    'Downstream training on ' + dataset_down,\n",
-    "                    'figs/generalization_bp_all_' + dataset_up + '_' + dataset_down)"
+    "                    'figs/generalization_bp_all1_' + dataset_up + '_' + dataset_down)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot to compare all.\n",
+    "all_stats_up = [agg_stats_rnn_up,\n",
+    "                agg_stats_prepost_l3_up,\n",
+    "                agg_stats_prepostcount_l3_up,\n",
+    "                None]\n",
+    "all_stats_down = [agg_stats_rnn_down,\n",
+    "                  agg_stats_prepost_l3_down,\n",
+    "                  agg_stats_prepostcount_l3_down,\n",
+    "                  stats_vanilla]\n",
+    "labels = ['RNN', 'PrePost-L3', 'PrePostCount-L3', 'Vanilla']\n",
+    "plot_compare_models(all_stats_up, all_stats_down, labels,\n",
+    "                    'Upstream meta-learning on ' + dataset_up,\n",
+    "                    'Downstream training on ' + dataset_down,\n",
+    "                    'figs/generalization_bp_all2_' + dataset_up + '_' + dataset_down)"
    ]
   },
   {
