- In quick_get_data(), now printing class percentages in addition to counts for ReLU data. - Swapped the order of some status messages for clarity.

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -66,7 +66,10 @@
     "    \n",
     "    elif which == 'relu':\n",
     "        X, y = layer_relu_data(n_up, N*3, relu_k)\n",
-    "        print('Count of 0:', np.sum(y == 0), ' Count of 1:', np.sum(y == 1))\n",
+    "        class0_cnt = np.sum(y == 0)\n",
+    "        class1_cnt = np.sum(y == 1)\n",
+    "        total = class0_cnt + class1_cnt\n",
+    "        print(f'Class 0: {class0_cnt} ({class0_cnt*100/total:.1f}%)   Class 1: {class1_cnt} ({class1_cnt*100/total:.1f}%)')\n",
     "    \n",
     "    elif which == 'mnist':\n",
     "        # NOTE: Argument N is ignored here.\n",
@@ -210,8 +213,8 @@
     "        while not success:\n",
     "            brain_up = brain_up_fact()  # NOTE: Some initializations are unlucky.\n",
     "    \n",
-    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_up, n_up)\n",
     "            print('Meta-learning on ' + dataset_up + '...')\n",
+    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_up, n_up)\n",
     "            stats_up = metalearn_rules(\n",
     "                X_train, y_train, brain_up, num_rule_epochs=num_rule_epochs,\n",
     "                num_epochs=num_epochs_upstream, batch_size=100, learn_rate=1e-2,\n",
@@ -242,8 +245,8 @@
     "\n",
     "        # Downstream.\n",
     "        if dataset_down is not None and n_down is not None:\n",
-    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_down, n_down)\n",
     "            print('Training NEW brain instance on ' + dataset_down + '...')\n",
+    "            X_train, y_train, X_test, y_test = quick_get_data(dataset_down, n_down)\n",
     "        else:\n",
     "            print('Training NEW brain instance on the same dataset instance...')\n",
     "        stats_down = train_downstream(\n",
