Fixed reference to an external variable in quick_get_data().

--- a/BrainNet/notebooks/FF_common.ipynb
+++ b/BrainNet/notebooks/FF_common.ipynb
@@ -66,7 +66,7 @@
     "        X, y = random_halfspace_data(dim=dim, n=N)\n",
     "    \n",
     "    elif which == 'relu':\n",
-    "        X, y = layer_relu_data(n_up, N*3, relu_k)\n",
+    "        X, y = layer_relu_data(dim, N*3, relu_k)\n",
     "        class0_cnt = np.sum(y == 0)\n",
     "        class1_cnt = np.sum(y == 1)\n",
     "        total = class0_cnt + class1_cnt\n",
